RESOLVED FIXED108548
[Qt][WK2] Another attempt to fix build after recent WebKit2 changes
https://bugs.webkit.org/show_bug.cgi?id=108548
Summary [Qt][WK2] Another attempt to fix build after recent WebKit2 changes
Rafael Brandao
Reported 2013-01-31 16:32:58 PST
[Qt][WK2] Another attempt to fix build after recent WebKit2 changes
Attachments
Patch (2.68 KB, patch)
2013-01-31 16:34 PST, Rafael Brandao
no flags
Patch (8.87 KB, patch)
2013-01-31 17:49 PST, Rafael Brandao
no flags
Rafael Brandao
Comment 1 2013-01-31 16:34:54 PST
Rafael Brandao
Comment 2 2013-01-31 16:36:17 PST
I believe one of the errors came after patch from bug #108407
Rafael Brandao
Comment 3 2013-01-31 16:55:10 PST
(In reply to comment #2) > I believe one of the errors came after patch from bug #108407 The problem is getPluginPath was moved to WebPageProxy but it is slightly different. It now uses some PluginModuleInfo attributes that are protected by PLATFORM(MAC) on trunk. What I did was to allow other ports to use it too, but protect only pluginArchitecture (which seems to be included by mach/machine.h).
Rafael Brandao
Comment 4 2013-01-31 16:57:11 PST
Comment on attachment 185892 [details] Patch There are now other build failures, I will try to solve them all at once.
Anders Carlsson
Comment 5 2013-01-31 16:58:12 PST
(In reply to comment #3) > (In reply to comment #2) > > I believe one of the errors came after patch from bug #108407 > > The problem is getPluginPath was moved to WebPageProxy but it is slightly different. It now uses some PluginModuleInfo attributes that are protected by PLATFORM(MAC) on trunk. What I did was to allow other ports to use it too, but protect only pluginArchitecture (which seems to be included by mach/machine.h). Ah, thanks for the explanation! A better fix is to just put these lines in WebPageProxy::getPluginPath inside an #if PLATFORM(MAC) block. pluginLoadPolicy = m_uiClient.shouldInstantiatePlugin(this, plugin.bundleIdentifier, plugin.info.name) ? PluginModuleLoadNormally : PluginModuleBlocked; if (pluginLoadPolicy != PluginModuleLoadNormally) return;
Rafael Brandao
Comment 6 2013-01-31 17:49:50 PST
Rafael Brandao
Comment 7 2013-01-31 18:01:37 PST
Anders, please look when you have time. I've put into the ChangeLog the references to the bugs that caused each error and tried to follow those changes to get similar solutions.
Rafael Brandao
Comment 8 2013-01-31 18:03:17 PST
Comment on attachment 185907 [details] Patch Also, I need to leave now. Please cq+ if you feel like this is correct.
WebKit Review Bot
Comment 9 2013-01-31 19:53:46 PST
Comment on attachment 185907 [details] Patch Clearing flags on attachment: 185907 Committed r141528: <http://trac.webkit.org/changeset/141528>
WebKit Review Bot
Comment 10 2013-01-31 19:53:50 PST
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 11 2013-01-31 23:23:32 PST
Thanks Rafael
Note You need to log in before you can comment on or make changes to this bug.